3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Added support for compound spellcasting animations
    server/spell_util.c
    common/object.c
Yann Chachkoff (gros) 2007-11-18

Added support for compound attack animations (displaying a custom animation
sequence when attacking with a weapon)
    server/attack.c
    server/time.c
    server/server.c
    include/object.h
    include/global.h
    common/loader.l
    common/anim.c
Yann Chachkoff (gros) 2007-11-18

Added support for changing the FLAG_ANIMATED from cfpython.
    plugins/cfpython/cfpython_object.c
    plugins/cfpython/include/cfpython_object_private.h
Yann Chachkoff (gros) 2007-11-18

Misc fixes, no functional change.
 common/languages.c: convert to UTF-8, fix comment, add missing new line at end.
 doc/Developers/object.dox: fix references.
 include/spellist.h: fix comment.
 lib/i18n/messages.fr: convert to UTF-8.
 server/c_misc.c hiscore.c: fix comments.
Nicolas Weeger 2007-11-17

Adds basical i18n support for help and "static" server strings.
Modified files:
 common/init.c Makefile.am
 include/includes.h libproto.h sproto.h
 lib/Makefile.am
 server/c_misc.c commands.c
Added files:
 server/trunk/common/languages.c
 include/languages.h
 lib/help/*.en
 lib/i18n/messages.fr messages.en
Removed files:
 lib/help/* (old help files)
Yann Chachkoff (gros) 2007-11-17

Adding svnversion.h to SVN was not a good idea.  It will get re-committed over
and over even though that was not the intent.  Removed.  Move include prior to
all other directories to be sure svnversion.h is built prior to inclusion in
any other source file.
  Makefile.am
  include/svnversion.h
  include/version.h
Kevin Bulgrien 2007-11-09
