@@ -76,6 +76,7 @@ void init_ob_types(ob_methods *base_type) {
     init_type_potion();
     init_type_power_crystal();
     init_type_rune();
+    init_type_savebed();
     init_type_scroll();
     init_type_shop_inventory();
     init_type_shop_mat();
