@@ -22,6 +22,7 @@ pedestal/pedestal.c \
 player_mover/player_mover.c \
 potion/potion.c \
 power_crystal/power_crystal.c \
+savebed/savebed.c \
 scroll/scroll.c \
 shop_inventory/shop_inventory.c \
 shop_mat/shop_mat.c \
