@@ -15,6 +15,17 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Refactor savebed code.
+    server/ob_types.c
+    server/apply.c
+    include/sproto.h
+    include/typesproto.h
+    types/legacy/apply.c
+    types/Makefile.am
+    types/savebed
+    types/savebed/savebed.c
+Alex Schultz 2007-11-21
+
 Added support for compound spellcasting animations
     server/spell_util.c
     common/object.c
